// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for MantleRevOps's pushEvent destination action: all fields 1`] = `
Object {
  "customerId": "vgsl(VF]C@p@66ob",
  "event_id": "vgsl(VF]C@p@66ob",
  "event_name": "vgsl(VF]C@p@66ob",
  "properties": Object {
    "testType": "vgsl(VF]C@p@66ob",
  },
  "timestamp": "2021-02-01T00:00:00.000Z",
}
`;

exports[`Testing snapshot for MantleRevOps's pushEvent destination action: required fields 1`] = `
Object {
  "customerId": "vgsl(VF]C@p@66ob",
  "event_name": "vgsl(VF]C@p@66ob",
  "properties": Object {},
}
`;
